Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectIntObj.quorum
class Main
    action Main
        Object v = Test()
        Integer var = cast(Integer, v)
        if var:GetValue() = 5
            output "passed"
        end
    end

    action Test() returns Object
        Integer var
        var:SetValue(5)
        return var
    end
end