Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextTextObj.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        Text var
        var:SetValue("text")
        return var
    end
end